--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Meteor</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -33,11 +33,15 @@
       <strong>Build Full-Stack Javascript Apps with Meteor</strong>
       <br>
     </h1>
-    <h2 class="header-subtitle mb-5">
+<div class="row">
+  <div class="offset-md-1 col-md-10">
+    <h2 class="header-subtitle mb-5 align-middle">
       Meteor is an open source framework for seamlessly building and deploying Web, Mobile, and Desktop applications in Javascript.
       <br>
     </h2>
-    <div class="header__action-content button">
+  </div>
+</div>
+    <div class="header-action-content button">
       <a href="#" class="btn btn-dark btn-lg">GET STARTED</a>
       <a href="#" class="btn btn-outline-dark btn-lg">INSTALL</a>
     </div>
